<resources>
    <string name="app_name">McKeeper</string>
    <string name="action_settings">Settings</string>


    <string name="Date">Date</string>
    <string name="timeStart">Start time</string>
    <string name="timeEnd">End time</string>
    <string name="isBreak">Break</string>
    <string name="pyatn">Pyatnashki</string>
    <string name="recount">Recount</string>
    <string name="save">Save</string>
    <string name="rate">Your rate</string>
    <string name="rest">Your restaurant</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="number">Your number</string>
    <string name="addShift">Add shift</string>
    <string name="welcomeText">Welcome to McKeeper</string>

    <string name="text_info_fragment">Hi, this application is designed to account for their shifts and is exclusively focused on McDonald\'s employees. It takes into account the nuances of hours accounting and payroll existing in our company. The application is still in a very raw state, but already has its own basic functionality, namely, it counts the hours worked, calculates how much money will come in advance and salary, taking into account possible processing. However, of course, errors and omissions may occur in it, which I will try to correct as far as possible, so please inform me about them.</string>
    <string name="hello_blank_fragment">Screen in developing</string>
    <string name="screen_add_shift">Adding shift</string>
    <string name="screen_info">Info</string>
    <string name="screen_initial">Welcome to McKeeper</string>
    <string name="screen_news">News</string>
    <string name="screen_rasp">Timetable</string>
    <string name="screen_start">Overview</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
