<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="1"
        android:title="@string/screen_start"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_action_news"
        android:orderInCategory="1"
        android:title="@string/screen_news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_action_rasp"
        android:orderInCategory="100"

        android:title="@string/screen_rasp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="100"
        android:title="@string/screen_info"
        app:showAsAction="ifRoom" />
</menu>