<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_news"
        android:icon="@drawable/ic_action_news"
        android:orderInCategory="1"
        android:title="@string/screen_news"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_rasp"
        android:icon="@drawable/ic_action_rasp"
        android:orderInCategory="100"

        android:title="@string/screen_rasp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="100"
        android:title="@string/screen_info"
        app:showAsAction="always" />


</menu>